--- a/index.html
+++ b/index.html
@@ -524,6 +524,8 @@
                         alt=""
                         class="lazyload"
                     /></span>
+                    <span class="topAbout__tagInner">OVERVIEW</span>
+
                     <!-- <span class="topProducts__tagInner">事業内容について</span> -->
                   </div>
                   <h2 class="topProducts__heading js-topHeading">
@@ -759,7 +761,7 @@
                           alt=""
                           class="lazyload"
                       /></span>
-                      <span class="topNews__tagInner">最新情報</span>
+                      <span class="topAbout__tagInner">OVERVIEW</span>
                     </div>
                     <h2 class="topNews__heading js-topHeading">
                       <span class="js-topHeadingInner"></span
@@ -888,7 +890,7 @@
                             alt=""
                             class="lazyload"
                         /></span>
-                        <span class="topNews__tagInner">最新情報</span>
+                        <span class="topAbout__tagInner">OVERVIEW</span>
                       </div>
                       <h2 class="topNews__heading js-topHeading">
                         <span class="js-topHeadingInner"></span
@@ -1043,7 +1045,7 @@
                           alt=""
                           class="lazyload"
                       /></span>
-                      <span class="topRecruit__tagInner">採用情報</span>
+                    <span class="topAbout__tagInner">OVERVIEW</span>
                     </div>
                     <h2 class="topRecruit__heading js-topHeading">
                       <span class="js-topHeadingInner">AI-Assisted</span
