--- a/index.html
+++ b/index.html
@@ -421,9 +421,10 @@
                           height="37"
                           viewBox="0 0 34 37"
                           fill="none"
+                          class="t-white"
                         >
                           <circle cx="17" cy="18" r="16.5" stroke="#B8CADE" />
-                          <path d="M15 13.5L20 18.5L15 23.5" stroke="#13132D" />
+                          <path class="t-white" d="M15 13.5L20 18.5L15 23.5" stroke="#FFFFFF" />
                         </svg>
                       </span>
                     </a>
