--- a/index.html
+++ b/index.html
@@ -1257,17 +1257,17 @@
                     HOME
                   </button>
                   <div class="l-foot__nav-box">
-                    <a href="/about/" class="l-foot__nav-link sp"
-                      >会社情報 TOP</a
+                    <a href="#" class="l-foot__nav-link sp"
+                      >TOP</a
                     >
                     <a href="/about/philosophy/" class="l-foot__nav-link"
-                      >経営理念</a
+                      >Management Philosophy</a
                     >
                     <a href="/about/message/" class="l-foot__nav-link"
-                      >トップメッセージ</a
+                      >Top Message</a
                     >
                     <a href="/about/company/" class="l-foot__nav-link"
-                      >会社概要</a
+                      >Company Overview</a
                     >
                   </div>
                 </div>
@@ -1278,28 +1278,28 @@
                   </button>
                   <div class="l-foot__nav-box">
                     <a href="/business/" class="l-foot__nav-link sp"
-                      >事業内容 TOP</a
+                      >Business Content TOP</a
                     >
                     <em class="l-foot__nav-link"
-                      >データオプティマイズソリューション</em
+                      >Deta Optimize Sales</em
                     >
                     <a
                       href="https://www.opro.net/service/formdx/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >帳票DX</a
+                      >Form DX</a
                     >
                     <a
                       href="https://www.opro.net/service/kamiless/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >カミレス</a
+                      >Ka Miless</a
                     >
                     <a
                       href="https://www.opro.net/service/agent-file/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >Agentファイル</a
+                      >Agent File</a
                     >
                     <a
                       href="https://www.opro.net/service/docutus/"
@@ -1311,16 +1311,16 @@
                       href="https://www.opro.net/service/docutone/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >ドキュトーン</a
+                      >Docutone</a
                     >
                     <a
                       href="https://www.opro.net/service/oproarts/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >オプロアーツ</a
+                      >OproArts</a
                     >
                     <em class="l-foot__nav-link"
-                      >セールスマネジメントソリューション</em
+                      >Sales Management Solution</em
                     >
                     <a
                       href="https://subsc.opro.net/soasc/"
