--- a/index.html
+++ b/index.html
@@ -1326,13 +1326,13 @@
                       href="https://subsc.opro.net/soasc/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >ソアスク</a
+                      >Soask</a
                     >
                     <a
                       href="https://subsc.opro.net/soasc/monosc/"
                       target="_blank"
                       class="l-foot__nav-link"
-                      >モノスク</a
+                      >Monosk</a
                     >
                   </div>
                 </div>
@@ -1341,19 +1341,19 @@
                   <a
                     href="https://www.opro.net/partnership/"
                     class="l-foot__nav-h"
-                    >パートナー</a
+                    >Partner</a
                   >
                   <a
                     href="https://spc.opro.net/hc/ja"
                     target="_blank"
                     class="l-foot__nav-h"
-                    >サポート</a
+                    >Support</a
                   >
                   <a
                     href="https://event.opro.net/"
                     target="_blank"
                     class="l-foot__nav-h"
-                    >イベント＆セミナー</a
+                    >Events & Seminars</a
                   >
                   <a href="/ir/" class="l-foot__nav-h">ABOUT US</a>
                   <a
@@ -1367,22 +1367,22 @@
                 <div class="l-foot__nav-group">
                   <div class="l-foot__sub">
                     <a href="/sitemap/" class="l-foot__sub-link"
-                      >サイトマップ</a
+                      >Sitemap</a
                     >
                     <a href="/privacy/" class="l-foot__sub-link"
-                      >個人情報保護方針</a
+                      >Privacy Policy</a
                     >
                     <a href="/privacyhandling/" class="l-foot__sub-link"
-                      >個人情報の取扱いについて</a
+                      >Personal Information Handling</a
                     >
                     <a href="/e-commerce/" class="l-foot__sub-link"
-                      >特定商取引法に関する表示</a
+                      >Specified Commercial Transactions Act Notice</a
                     >
                     <a href="/securitypolicy/" class="l-foot__sub-link"
-                      >情報セキュリティに関する方針</a
+                      >Information Security Policy</a
                     >
                     <a href="/intellectualproperty/" class="l-foot__sub-link"
-                      >知的財産権遵守方針</a
+                      >Intellectual Property Rights Compliance Policy</a
                     >
                   </div>
                 </div>
