--- a/index.html
+++ b/index.html
@@ -593,13 +593,6 @@
                         class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc isActive"
                       />
                       <img
-                        data-src="./assets/img/common/1 (2).png"
-                        width="312"
-                        height="257"
-                        alt=""
-                        class="lazyload onlySp"
-                      />
-                      <img
                         data-src="./assets/img/common/1 (3).png"
                         width="680"
                         height="587"
@@ -1337,7 +1330,7 @@
                   </div>
                 </div>
                 <div class="l-foot__nav-group">
-                  <a href="/news/" class="l-foot__nav-h">ニュース</a>
+                  <a href="/news/" class="l-foot__nav-h">NEWS</a>
                   <a
                     href="https://www.opro.net/partnership/"
                     class="l-foot__nav-h"
