--- a/index.html
+++ b/index.html
@@ -443,75 +443,7 @@
                   </a> -->
                   </div>
                 </div>
-                <div class="topAbout__inner">
-                  <div class="topAbout__item01" id="js-about01"></div>
-                  <div class="topAbout__textBox img-group">
-                    <div class="flex mt-20">
-                      <p
-                        class="lazyload onlyPc sub-over auto"
-                        width="191"
-                        height="49"
-                        alt=""
-                      >
-                        Company Name<br /><span class="sub-data"
-                          >Kewel Corporation</span
-                        >
-                      </p>
-                    </div>
-                    <div class="flex mt-20">
-                      <p
-                        class="lazyload onlyPc sub-over auto"
-                        width="191"
-                        height="49"
-                        alt=""
-                      >
-                        Established<br /><span class="sub-data"
-                          >April 3,2025</span
-                        >
-                      </p>
-                    </div>
-                    <div class="mt-20 flex">
-                      <p
-                        class="lazyload onlyPc sub-over auto"
-                        width="191"
-                        height="49"
-                        alt=""
-                      >
-                        Headquarters<br /><span class="sub-data"
-                          >Shinagawa-ku, Tokyo</span
-                        >
-                      </p>
-                    </div>
-                    <div class="mt-20 flex">
-                      <p
-                        class="lazyload onlyPc sub-over auto"
-                        width="191"
-                        height="49"
-                        alt=""
-                      >
-                        Capital<br /><span class="sub-data"
-                          >30 million yen</span
-                        >
-                      </p>
-                    </div>
-                    <div class="mt-20 flex">
-                      <p
-                        class="lazyload onlyPc sub-over auto"
-                        width="191"
-                        height="49"
-                        alt=""
-                      >
-                        Representative<br />
-                        Director<br /><span class="sub-data"
-                          >Takashi Shono</span
-                        >
-                      </p>
-                    </div>
-                  </div>
-
-                  <div class="topAbout__item02" id="js-about02"></div>
-                </div>
-                <div class="topAbout__inner">
+                <div clss="topAbout__inner">
                 <div class="topAbout__item01" id="js-about01"></div>
                 <div class="topAbout__textBox">
                   <div class="topAbout__text01 js-topAbout__text"><img src="./assets/img/common/Screenshot_1.png" class="lazyload" width="191" height="49" alt=""></div>
@@ -528,12 +460,8 @@
                     <img data-src="./assets/img/common/Screenshot_5.png" width="218" height="49" alt="" class="lazyload onlyPc">
                     <img data-src="./assets/img/common/Screenshot_5.png" width="259" height="35" alt="" class="lazyload onlySp">
                   </div>
-                  <div class="topAbout__text06 js-topAbout__text">
-                    <img data-src="./assets/img/common/Screenshot_6.png" width="279" height="49" alt="" class="lazyload onlyPc">
-                    <img data-src="./assets/img/common/Screenshot_6.png" width="157" height="35" alt="" class="lazyload onlySp">
-                  </div>
                   <div class="topAbout__text07 onlySp js-topAbout__text">
-                    <img data-src="./assets/img/common/Screenshot_6.png" width="202" height="35" alt="" class="lazyload">
+                    <img data-src="./assets/img/common/Screenshot_5.png" width="202" height="35" alt="" class="lazyload">
                   </div>
                 </div>
                 <div class="topAbout__item02" id="js-about02">
