--- a/index.html
+++ b/index.html
@@ -428,19 +428,6 @@
                         </svg>
                       </span>
                     </a>
-
-                    <!-- <a href="javascript:" class="top__button js-modal-video" id="openModal" data-video-id="">
-                    コンセプトムービーを見る
-                    <div id="modal-video" class="close js-modal-video-close">
-                      <div id="player"></div>
-                    </div>
-                    <span>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="34" height="37" viewBox="0 0 34 37" fill="none">
-                        <circle cx="17" cy="18" r="16.5" stroke="#B8CADE"/>
-                        <path d="M15 13.5L20 18.5L15 23.5" stroke="#13132D"/>
-                      </svg>
-                    </span>
-                  </a> -->
                   </div>
                 </div>
                 <div clss="topAbout__inner">
@@ -482,7 +469,7 @@
                         alt=""
                         class="lazyload"
                     /></span>
-                    <span class="topAbout__tagInner">OVERVIEW</span>
+                    <span class="topAbout__tagInner t-white">OVERVIEW</span>
 
                     <!-- <span class="topProducts__tagInner">事業内容について</span> -->
                   </div>
