--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 </div>
                 <div class="topAbout__inner">
                   <div class="topAbout__item01" id="js-about01"></div>
-                  <div class="topAbout__textBox">
+                  <div class="topAbout__textBox imgage-group">
                     <div class="topAbout__text01 js-topAbout__text"><img src="./assets/img/common/Screenshot_1.png" class="lazyload" width="320" height="49" alt=""></div>
                     <div class="topAbout__text02 js-topAbout__text"><img data-src="./assets/img/common/Screenshot_2.png" class="lazyload" width="300" height="49" alt=""></div>
                     <div class="topAbout__text03 js-topAbout__text">
