--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
                           fill="none"
                           class="t-white"
                         >
-                          <circle cx="17" cy="18" r="16.5" stroke="#B8CADE" />
-                          <path class="t-white" d="M15 13.5L20 18.5L15 23.5" stroke="#FFFFFF" />
+                          <circle cx="17" cy="18" r="16.5" stroke="#eee" />
+                          <path class="t-white" d="M15 13.5L20 18.5L15 23.5" stroke="#eee" />
                         </svg>
                       </span>
                     </a>
